--- a/404.html
+++ b/404.html
@@ -1,10 +1,11 @@
 ---
 permalink: /404.html
 layout: default
+title: 404
 ---
 
 <style type="text/css" media="screen">
-  .container {
+  .container404 {
     margin: 10px auto;
     max-width: 600px;
     text-align: center;
@@ -17,7 +18,7 @@ layout: default
   }
 </style>
 
-<div class="container">
+<div class="container404">
   <h1>404</h1>
 
   <p><strong>Page not found :(</strong></p>
