--- a/404.html
+++ b/404.html
@@ -17,9 +17,13 @@ layout: default
   }
 </style>
 
-<div class="container404">
-  <h1>404</h1>
+<section class="under-navbar">
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
-</div>
+  <div class="container404">
+    <h1>404</h1>
+
+    <h5><strong>صفحه موردنظر پیدا نشد :(</strong></h5>
+    <p class="ltr">The requested page could not be found.</p>
+  </div>
+
+</section>
