title added to index pages front matter

--- a/travels/index.html
+++ b/travels/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: 'سفرنامه ها'
 permalink: '/travels/'
 ---
 <section id="travels-index" class="under-navbar index-page">
