--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: 'نمونه کار ها'
 permalink: '/portfolio/'
 ---
 <section id="travels-index" class="under-navbar index-page">
